# jishe

./: .env  .env.example  .gitignore  README.md  init.sql  pyproject.toml  requirements.txt  test.sql
.cursor/rules/: backend.mdc
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  auth.py  chat.py  error.py  iodta.py  patrol.py  stock.py  transport.py  user_log.py  users.py
app/core/: __init__.py  config.py  context.py  logger.py  password.py  security.py
app/crud/: __init__.py  auth.py  error.py  goods.py  iodta.py  patrol.py  role.py  stock.py  transport.py  user.py
app/db/: __init__.py  base.py  database.py  models.py  session.py
app/db/migrations/: user_update.sql
app/models/: __init__.py  drone.py  error.py  goods.py  patrol.py  role.py  rooms.py  stock.py  stream_config.py  transport.py  user.py  user_role.py  warehouse.py
app/schemas/: __init__.py  auth.py  chat.py  drone.py  error.py  goods.py  iodta.py  patrol.py  role.py  rooms.py  stock.py  stream_config.py  token.py  transport.py  user.py  user_log.py  user_role.py  warehouse.py
app/scripts/: __init__.py  create_admin.py
app/service/: aliyunOSS.py  chat_service.py  db_service.py  gaode.py  iotda_service.py  user_log.py  warehouse_service.py
app/services/: __init__.py  auth_service.py  user_service.py
